# xsens-imu

./: .gitignore  CMakeLists.txt  README.md  deviceclass.cpp  deviceclass.h  example.cpp  init-git-flow.sh  xsensImu.cpp  xsensImu.h
include/xsens/: xsrawgnsspvtdata.h  xsvector.h
xcommunication/: CMakeLists.txt
xstypes/: CMakeLists.txt
